PointQueries extended